docs/api/qiskit/0.19/qiskit.aqua.utils.CircuitFactory.md
---
title: CircuitFactory
description: API reference for qiskit.aqua.utils.CircuitFactory
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.utils.CircuitFactory
---

# CircuitFactory

<span id="qiskit.aqua.utils.CircuitFactory" />

`CircuitFactory(num_target_qubits)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Base class for CircuitFactories

## Attributes

### num\_target\_qubits

Returns the number of target qubits

## Methods

### build

<span id="qiskit.aqua.utils.CircuitFactory.build" />

`abstract CircuitFactory.build(qc, q, q_ancillas=None, params=None)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds corresponding sub-circuit to given circuit

**Parameters**

*   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
*   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
*   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
*   **params** (*list*) – parameters for circuit

### build\_controlled

<span id="qiskit.aqua.utils.CircuitFactory.build_controlled" />

`CircuitFactory.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds corresponding controlled sub-circuit to given circuit

**Parameters**

*   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
*   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
*   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
*   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
*   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit

### build\_controlled\_inverse

<span id="qiskit.aqua.utils.CircuitFactory.build_controlled_inverse" />

`CircuitFactory.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds controlled inverse of corresponding sub-circuit to given circuit

**Parameters**

*   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
*   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
*   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
*   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
*   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit

### build\_controlled\_inverse\_power

<span id="qiskit.aqua.utils.CircuitFactory.build_controlled_inverse_power" />

`CircuitFactory.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible

### build\_controlled\_power

<span id="qiskit.aqua.utils.CircuitFactory.build_controlled_power" />

`CircuitFactory.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible

### build\_inverse

<span id="qiskit.aqua.utils.CircuitFactory.build_inverse" />

`CircuitFactory.build_inverse(qc, q, q_ancillas=None)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds inverse of corresponding sub-circuit to given circuit

**Parameters**

*   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
*   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
*   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)

### build\_inverse\_power

<span id="qiskit.aqua.utils.CircuitFactory.build_inverse_power" />

`CircuitFactory.build_inverse_power(qc, q, power, q_ancillas=None)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible

### build\_power

<span id="qiskit.aqua.utils.CircuitFactory.build_power" />

`CircuitFactory.build_power(qc, q, power, q_ancillas=None)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible

### get\_num\_qubits

<span id="qiskit.aqua.utils.CircuitFactory.get_num_qubits" />

`CircuitFactory.get_num_qubits()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

returns number of qubits

### get\_num\_qubits\_controlled

<span id="qiskit.aqua.utils.CircuitFactory.get_num_qubits_controlled" />

`CircuitFactory.get_num_qubits_controlled()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

returns number of qubits controlled

### required\_ancillas

<span id="qiskit.aqua.utils.CircuitFactory.required_ancillas" />

`CircuitFactory.required_ancillas()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

returns required ancillas

### required\_ancillas\_controlled

<span id="qiskit.aqua.utils.CircuitFactory.required_ancillas_controlled" />

`CircuitFactory.required_ancillas_controlled()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py "view source code")

returns required ancillas controlled

